k8s/06-mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: easyshop-hack
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
