k8s/09-easyshop-service.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: easyshop-service
  namespace: easyshop-hack
spec: 
  selector:
    app: easyshop
  ports: 
  - port: 80
    targetPort: 3000
